fix text issue on mobile
-TODO: still an issue with iPhone5 in landscape mode

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -13,6 +13,22 @@
     src: url('../fonts/EB_Garamond/EBGaramond-Regular.ttf');
 }
 
+.portrait-wrapper {
+    max-height: 50%;
+}
+
+@media only screen and (min-width: 601px) {
+    .portrait-wrapper {
+        max-height: 100%;
+    }
+}
+
+@media only screen and (min-width: 993px) {
+    .portrait-wrapper {
+        max-height: 50%;
+    }
+}
+
 h1, h2, h3, h4, h5, h6, h7 {
     font-family: Arvo-Bold;
     text-align: center;
